cluster/core/minio/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: minio
    app.kubernetes.io/name: minio
  name: minio
  namespace: storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: minio
      app.kubernetes.io/name: minio
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: minio
        app.kubernetes.io/name: minio
    spec:
      containers:
        - name: minio
          args:
            - "gateway"
            - "nas"
            - "/data"
            - "-S"
            - "/etc/minio/certs/"
            - "--console-address"
            - ":9001"
          image: "quay.io/minio/minio:RELEASE.2022-01-28T02-28-16Z"
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 9001
            timeoutSeconds: 1
          ports:
            - containerPort: 9000
              name: api
              protocol: TCP
            - containerPort: 9001
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 9001
            timeoutSeconds: 1
          resources:
            limits:
              memory: 750Mi
            requests:
              cpu: 100m
              memory: 100Mi
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 9001
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /data
              name: data
      nodeSelector:
        kubernetes.io/arch: amd64
      volumes:
        - name: data
          nfs:
            path: /mnt/WDx2-8TiB/volume1/minios
            server: ${NAS_ADD}
