cluster/core/minio/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: minio
    helm.toolkit.fluxcd.io/name: minio
  name: minio
  namespace: storage
spec:
  ports:
    - name: api
      port: 9000
      targetPort: api
    - name: http
      port: 9001
      targetPort: http
  selector:
    app.kubernetes.io/instance: minio
    app.kubernetes.io/name: minio
